Fixes bug of comments not showing

--- a/cmd/static/css/post.css
+++ b/cmd/static/css/post.css
@@ -3,7 +3,7 @@
 .content-container {
     background-color: rgb(254 186 109 / 75%);
     width: 65%;
-    margin: 75px auto;
+    margin: 75px auto 20px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,8 +19,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
     margin-bottom: 20px;
+    padding: 20px;
     box-shadow: -3px -3px rgb(57, 97, 97);
 }
 
@@ -37,11 +37,9 @@ img {
 
 .comment-section {
     background-color: rgb(254 186 109 / 75%);
-    width: 65%;
-    margin: 0 auto;
+    margin: 40px auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
     max-width: 800px;
 }
 
